--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "fontsource-roboto": "^3.0.3",
+    "loadash": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^2.5.14",
